# mulit-agent-student-flow

./: .gitignore  AUTHENTICATION.md  DEPLOYMENT.md  README.md
backend/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  pyproject.toml  run_tests.py  start.sh  test_agents.py  test_differentiation.py  test_feedback.py  test_lesson_context.py
backend/src/rehearsed_multi_student/: config.py
backend/src/rehearsed_multi_student/agents/: feedback_agent.py  lesson_summary_agent.py  student_agent.py
backend/src/rehearsed_multi_student/api/: main.py
backend/src/rehearsed_multi_student/models/: __init__.py  domain.py  feedback.py  outputs.py  schemas.py
backend/src/rehearsed_multi_student/models/feedback_agent/: __init__.py  request.py  response.py
backend/src/rehearsed_multi_student/models/lesson_analyzer/: __init__.py  context.py  (+2 more)
backend/src/rehearsed_multi_student/profiles/: algorithmic_student.yaml  loader.py  struggling_student.yaml  visual_student.yaml
backend/src/rehearsed_multi_student/prompts/: __init__.py  feedback_agent_prompts.py  lesson_analyzer_prompts.py  lesson_summary_prompts.py  student_agent_prompts.py
backend/src/rehearsed_multi_student/services/: __init__.py  lesson_analyzer.py  tts_service.py
backend/tests/: test_agents.py  test_end_lesson.py  test_feedback.py
backend/tests/integration/: __init__.py  test_api.py  test_feedback.py  test_lesson_context.py  test_lesson_context_e2e.py
backend/tests/unit_with_gemini/: test_agents.py  test_feedback_local.py  test_lesson_analyzer.py  test_lesson_summary_agent.py
(+11 files in other folders)
